ui: fix close button broken in Safari

--- a/app/assets/stylesheets/modules/single-session.css.scss
+++ b/app/assets/stylesheets/modules/single-session.css.scss
@@ -99,10 +99,10 @@
 
 .single-session__close-button {
   font-size: 32px;
-  line-height: 0;
+  line-height: 1;
   position: absolute;
   right: 0;
-  top: 20px;
+  top: 5px;
 }
 
 .single-session__placeholder {
